--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.cjs",
-    "dev": "nodemon index.cjs"
+    "dev": "remix vite:dev",
+    "build": "remix vite:build"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,16 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.13.2",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "@remix-run/node": "^2.12.0",
+    "@remix-run/react": "^2.12.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "vite": "^5.4.0"
+  },
+  "devDependencies": {
+    "@remix-run/dev": "^2.12.0",
+    "@remix-run/vite": "^2.12.0"
   }
 }
+
