--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemon": "^3.1.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.2",
     "vite": "^5.4.0"
   }
 }
