--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "nodemon": "^3.1.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
     "@vitejs/plugin-react": "^4.3.2",
     "vite": "^5.4.0"
   },
-  "devDependencies": {
+ "devDependencies": {
   "tailwindcss": "^3.4.0",
   "postcss": "^8.4.0",
-  "autoprefixer": "^10.4.0"
+  "autoprefixer": "^10.4.0",
+  "vite": "^5.4.0",
+  "@types/react-router-dom": "^5.3.3"
 }
 }
 
