--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "nodemon": "^3.1.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
     "@vitejs/plugin-react": "^4.3.2",
     "vite": "^5.4.0"
   },
