--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "lucide-react": "^0.469.0",
     "@vitejs/plugin-react": "^4.3.2",
     "vite": "^5.4.0"
   },
