--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "express": "^5.1.0",
     "mongoose": "^8.13.2",
     "nodemon": "^3.1.10",
+    "@react-pdf/renderer": "^3.0.0",
+    "postcss": "^8.4.30",
+    "autoprefixer": "^10.4.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
