--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.13.2",
     "nodemon": "^3.1.10",
+    "file-saver": "^2.0.5",
     "@react-pdf/renderer": "^3.0.0",
     "postcss": "^8.4.30",
     "autoprefixer": "^10.4.15",
